turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: not found: value isseBrosse
    isseBrosse()
    ^LangtonsAnt:11: error: not found: value veBrosse
    veBrosse()
    ^