turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
var indice = 0


def step(rule:Array[Char], colors:Array[Color]) {
  if(getCouleurSol()!=colors(indice)){
    indice = indice+1
  } else {
    setCouleurBrosse(colors((indice+1)%(colors.length-1)))
    isseBrosse()
    veBrosse()
    if(rule(indice)=='L'){
      gauche()
      avance
    } else {
      droite()
      avance()
    }
    var indice = 0
  }
}